# reductor

./: Cargo.toml  README.md
src/: iter.rs  lib.rs  reductor.rs
src/reductors/: count.rs  mean.rs  min_max.rs  mod.rs  product.rs  state.rs  sum.rs
