[package]
name = "reductor"
version = "0.0.12"
edition = "2021"
authors = ["Yotam Ofek <yotam.ofek@gmail.com>"]
description = "Generic abstractions for combining and nesting reduction patterns for iterables."
repository = "https://github.com/yotamofek/reductor/"
license = "MIT OR Apache-2.0"

[dependencies]
